-tab charts mostly working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,27 +27,10 @@ export(REGIONTYPE_PROVINCIAL)
 export(REGIONTYPES)
 
 # Utility functions
-export(build_emissions_catalog)
-export(build_emissions_maps)
-export(clean_country_name)
-export(clean_fuel_name)
-export(clean_sector_name)
-export(compare_global_vs_national)
 export(deployShinyApp)
-export(get_available_sectors)
-export(get_catalog_countries)
-export(get_catalog_pollutants)
-export(get_catalog_years)
-export(get_emissions)
-export(get_emissions_catalog)
-export(get_emissions_raster)
-export(get_latest_year)
-export(get_sector_name)
-export(get_sector_table)
-export(init_emissions_catalog)
 export(iso3_to_country)
-export(read_emissions_catalog)
-export(validate_sector_code)
+export(get_data_path)
+export(get_project_root)
 
 # Imports
 importFrom(R6, R6Class)
