--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(deployShinyApp)
 export(iso3_to_country)
 export(get_data_path)
 export(get_project_root)
+export(map_values)
 
 # Imports
 importFrom(R6, R6Class)
