--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     ggplot2,
     RColorBrewer,
     shiny,
-    countrycode
+    countrycode,
+    mapview
 Suggests: 
     testthat (>= 3.0.0),
     knitr,
