First online version working on Cloud Run!

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ tmp/
 # Cache directories - too large for deployment (94GB+)
 cache/
 data/cache/
+# Symlink
+inst/data 
 
 # Large data files
 *.nc
