Various UI/UX improvements - faceting - mapping - about

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,3 +57,4 @@ importFrom(glue, glue)
 importFrom(stringr, str_extract)
 importFrom(tidyr, pivot_longer)
 importFrom(purrr, map)
+export(fix_ggplotly_facets)
