--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,22 @@
 events {
-    worker_connections 1024;
+    worker_connections 2048;  # Increased for production
+    use epoll;
+    multi_accept on;
 }
 
 http {
+    # Increase buffer sizes to handle larger requests
+    client_max_body_size 100M;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 4 16k;
+
     upstream titiler_service {
-        server titiler:8000;  # External TiTiler from docker-compose
+        server localhost:8000;  # TiTiler service
     }
 
     upstream shiny_app {
-        server localhost:8080;
+        server 127.0.0.1:3838 max_fails=3 fail_timeout=30s;  # Shiny runs on port 3838
+        keepalive 32;
     }
 
     server {
@@ -34,7 +42,7 @@ http {
             }
         }
 
-        # Handle all other requests (Shiny app)
+        # Handle all requests (Shiny app)
         location / {
             proxy_pass http://shiny_app;
             proxy_set_header Host $host;
@@ -42,6 +50,11 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 86400;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_buffering off;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
         }
 
         # Health check endpoint
