--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,36 +5,37 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor/
 
+[program:shiny]
+command=Rscript /app/test_app.R
+directory=/app
+autostart=true
+autorestart=true
+priority=1
+stdout_logfile=/var/log/supervisor/shiny.out.log
+stderr_logfile=/var/log/supervisor/shiny.err.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+environment=PORT=3838,R_CONFIG_ACTIVE=production,TITILER_URL=http://localhost:8000
+
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 autostart=true
 autorestart=true
-priority=1
+priority=2
 stdout_logfile=/var/log/supervisor/nginx.out.log
 stderr_logfile=/var/log/supervisor/nginx.err.log
 stdout_logfile_maxbytes=50MB
 stderr_logfile_maxbytes=50MB
 
-[program:shiny]
-command=R -e "shiny::runApp('/app/inst', port = 8080, host = '0.0.0.0')"
-directory=/app
-autostart=true
-autorestart=true
-priority=2
-stdout_logfile=/var/log/supervisor/shiny.out.log
-stderr_logfile=/var/log/supervisor/shiny.err.log
-stdout_logfile_maxbytes=50MB
-stderr_logfile_maxbytes=50MB
-environment=PORT=8080,R_CONFIG_ACTIVE=production
-
 [program:titiler]
-command=/app/start_titiler_service.sh
+command=sh -c "echo 'Starting TiTiler HTTP server...' && python3 -m http.server 8000 --bind 0.0.0.0"
 directory=/app
 autostart=true
 autorestart=true
-priority=3
-stdout_logfile=/var/log/supervisor/titiler.out.log
-stderr_logfile=/var/log/supervisor/titiler.err.log
+priority=1
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=50MB
 stderr_logfile_maxbytes=50MB
-environment=TITILER_PORT=8000
+startsecs=1
+startretries=3
