--- a/nginx.conf
+++ b/nginx.conf
@@ -10,8 +10,14 @@ http {
     client_header_buffer_size 1k;
     large_client_header_buffers 4 16k;
 
+    # Support WebSocket upgrades (for Shiny)
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     upstream titiler_service {
-        server localhost:8000;  # TiTiler service
+        server 127.0.0.1:8000;  # TiTiler service
     }
 
     upstream shiny_app {
@@ -30,6 +36,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 30s;
 
             # CORS headers for TiTiler
             add_header 'Access-Control-Allow-Origin' '*' always;
@@ -42,19 +50,43 @@ http {
             }
         }
 
-        # Handle all requests (Shiny app)
+        # WebSocket endpoint for Shiny
+        location /websocket/ {
+            proxy_pass http://shiny_app;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            # Force upgrade for WebSocket path
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_set_header Origin $http_origin;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_read_timeout 86400;
+            proxy_send_timeout 86400;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+        }
+
+        # Handle all other requests (Shiny app)
         location / {
             proxy_pass http://shiny_app;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_set_header Origin $http_origin;
             proxy_read_timeout 86400;
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_buffering off;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
         }
 
         # Health check endpoint
