--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,36 +6,41 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor/
 
 [program:shiny]
-command=Rscript /app/test_app.R
+command=Rscript /app/shiny_app_entry_run.R
 directory=/app
 autostart=true
 autorestart=true
-priority=1
-stdout_logfile=/var/log/supervisor/shiny.out.log
-stderr_logfile=/var/log/supervisor/shiny.err.log
-stdout_logfile_maxbytes=50MB
-stderr_logfile_maxbytes=50MB
-environment=PORT=3838,R_CONFIG_ACTIVE=production,TITILER_URL=http://localhost:8000
-
-[program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
-autostart=true
-autorestart=true
-priority=2
-stdout_logfile=/var/log/supervisor/nginx.out.log
-stderr_logfile=/var/log/supervisor/nginx.err.log
-stdout_logfile_maxbytes=50MB
-stderr_logfile_maxbytes=50MB
-
-[program:titiler]
-command=sh -c "echo 'Starting TiTiler HTTP server...' && python3 -m http.server 8000 --bind 0.0.0.0"
-directory=/app
-autostart=true
-autorestart=true
-priority=1
+startsecs=5
+stopsignal=TERM
+stopasgroup=true
+killasgroup=true
+environment=R_CONFIG_ACTIVE=production,TITILER_URL=http://localhost:8001
+priority=10
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=50MB
-stderr_logfile_maxbytes=50MB
-startsecs=1
-startretries=3
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[program:titiler]
+command=/app/start_titiler_service.sh
+directory=/app
+autostart=true
+autorestart=true
+startsecs=5
+stopsignal=TERM
+stopasgroup=true
+killasgroup=true
+priority=20
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[unix_http_server]
+file=/var/run/supervisor.sock
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
