TRIED TO SIMPLIFY but doesn't work anymore

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor/
 
 [program:shiny]
-command=Rscript /app/shiny_app_entry_run.R
+command=Rscript /app/start_shiny.R
 directory=/app
 autostart=true
 autorestart=true
