--- a/nginx.conf
+++ b/nginx.conf
@@ -1,99 +1,111 @@
 events {
-    worker_connections 2048;  # Increased for production
-    use epoll;
-    multi_accept on;
+    worker_connections 1024;
 }
 
 http {
-    # Increase buffer sizes to handle larger requests
-    client_max_body_size 100M;
-    client_header_buffer_size 1k;
-    large_client_header_buffers 4 16k;
+    # Basic settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
-    # Support WebSocket upgrades (for Shiny)
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        ''      close;
+    # MIME types
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Upstream servers
+    upstream shiny {
+        server localhost:3838;
     }
 
-    upstream titiler_service {
-        server 127.0.0.1:8000;  # TiTiler service
+    upstream titiler {
+        server localhost:8001;
     }
 
-    upstream shiny_app {
-        server 127.0.0.1:3838 max_fails=3 fail_timeout=30s;  # Shiny runs on port 3838
-        keepalive 32;
-    }
-
+    # Main server block
     server {
         listen 8080;
-        server_name localhost;
+        server_name _;
 
-        # Handle TiTiler requests (proxy to external service)
-        location /titiler/ {
-            proxy_pass http://titiler_service/;
+        # Lightweight health endpoint for Cloud Run startup probes
+        location = /healthz {
+            add_header Content-Type text/plain;
+            return 200 "ok\n";
+        }
+
+        # Serve a blank favicon to avoid early upstream 502s during cold start
+        location = /favicon.ico {
+            empty_gif;
+        }
+
+        # Proxy TiTiler requests
+        location /cog/ {
+            proxy_pass http://titiler;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 300s;
-            proxy_connect_timeout 30s;
+            proxy_http_version 1.1;
+            proxy_read_timeout 300;
+            proxy_connect_timeout 5s;
+            proxy_next_upstream error timeout http_502 http_503 http_504;
+            proxy_next_upstream_tries 2;
 
-            # CORS headers for TiTiler
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-
+            # CORS headers for tile requests
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
+            
             # Handle preflight requests
             if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin *;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
                 return 204;
             }
         }
 
-        # WebSocket endpoint for Shiny
-        location /websocket/ {
-            proxy_pass http://shiny_app;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            # Force upgrade for WebSocket path
-            proxy_set_header Connection "upgrade";
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Port $server_port;
-            proxy_set_header Origin $http_origin;
+        # Map /cog/health to TiTiler's /health endpoint
+        location = /cog/health {
+            proxy_pass http://titiler/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_read_timeout 86400;
-            proxy_send_timeout 86400;
-            proxy_connect_timeout 60s;
-            proxy_buffering off;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Handle all other requests (Shiny app)
+        # Map /cog/tileMatrixSets to TiTiler's /tileMatrixSets (OGC list)
+        location = /cog/tileMatrixSets {
+            proxy_pass http://titiler/tileMatrixSets;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy all other requests to Shiny
         location / {
-            proxy_pass http://shiny_app;
+            proxy_pass http://shiny;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-            proxy_set_header Origin $http_origin;
-            proxy_read_timeout 86400;
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_buffering off;
+            
+            # WebSocket support for Shiny
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-        }
-
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
+            proxy_set_header Connection "upgrade";
+            proxy_read_timeout 86400;
+            proxy_connect_timeout 5s;
+            proxy_next_upstream error timeout http_502 http_503 http_504;
+            proxy_next_upstream_tries 2;
         }
     }
 }
