--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,7 +14,7 @@ startsecs=5
 stopsignal=TERM
 stopasgroup=true
 killasgroup=true
-environment=R_CONFIG_ACTIVE=production,TITILER_URL=http://localhost:8001
+environment=R_CONFIG_ACTIVE=production,PORT=3838
 priority=10
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
@@ -31,6 +31,22 @@ stopsignal=TERM
 stopasgroup=true
 killasgroup=true
 priority=20
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[program:nginx]
+command=nginx -g "daemon off;"
+directory=/app
+autostart=true
+autorestart=true
+startsecs=5
+stopsignal=TERM
+stopasgroup=true
+killasgroup=true
+# Start nginx last so upstreams are likely ready
+priority=50
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
