--- a/nginx.conf
+++ b/nginx.conf
@@ -1,111 +1,84 @@
 events {
-    worker_connections 1024;
+  worker_connections 1024;
 }
 
 http {
-    # Basic settings
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log;
 
-    # MIME types
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+  upstream shiny {
+    server 127.0.0.1:3838;
+  }
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+  upstream titiler {
+    server 127.0.0.1:8001;
+  }
 
-    # Upstream servers
-    upstream shiny {
-        server localhost:3838;
+  server {
+    listen 8080;
+    server_name _;
+
+    # Serve static COGs from /app/data at /data/
+    location /data/ {
+      alias /app/data/;
+      autoindex on;
+      add_header Cache-Control "public, max-age=3600";
     }
 
-    upstream titiler {
-        server localhost:8001;
+    # Proxy TiTiler under /cog/
+    location /cog/ {
+      proxy_pass http://titiler;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_http_version 1.1;
+      proxy_read_timeout 300;
+
+      add_header Access-Control-Allow-Origin *;
+      add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+      add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
+
+      if ($request_method = 'OPTIONS') {
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
+        add_header Content-Length 0;
+        add_header Content-Type text/plain;
+        return 204;
+      }
     }
 
-    # Main server block
-    server {
-        listen 8080;
-        server_name _;
-
-        # Lightweight health endpoint for Cloud Run startup probes
-        location = /healthz {
-            add_header Content-Type text/plain;
-            return 200 "ok\n";
-        }
-
-        # Serve a blank favicon to avoid early upstream 502s during cold start
-        location = /favicon.ico {
-            empty_gif;
-        }
-
-        # Proxy TiTiler requests
-        location /cog/ {
-            proxy_pass http://titiler;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_http_version 1.1;
-            proxy_read_timeout 300;
-            proxy_connect_timeout 5s;
-            proxy_next_upstream error timeout http_502 http_503 http_504;
-            proxy_next_upstream_tries 2;
-
-            # CORS headers for tile requests
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
-            
-            # Handle preflight requests
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin *;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-        }
-
-        # Map /cog/health to TiTiler's /health endpoint
-        location = /cog/health {
-            proxy_pass http://titiler/health;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Map /cog/tileMatrixSets to TiTiler's /tileMatrixSets (OGC list)
-        location = /cog/tileMatrixSets {
-            proxy_pass http://titiler/tileMatrixSets;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Proxy all other requests to Shiny
-        location / {
-            proxy_pass http://shiny;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # WebSocket support for Shiny
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_read_timeout 86400;
-            proxy_connect_timeout 5s;
-            proxy_next_upstream error timeout http_502 http_503 http_504;
-            proxy_next_upstream_tries 2;
-        }
+    # Map specific TiTiler endpoints that live at root
+    location = /cog/tileMatrixSets {
+      proxy_pass http://titiler/tileMatrixSets;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    location = /cog/health {
+      proxy_pass http://titiler/health;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Shiny app at root
+    location / {
+      proxy_pass http://shiny;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_read_timeout 86400;
+    }
+  }
 }
