--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,16 +5,25 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor/
 
+[program:nginx]
+command=nginx -g "daemon off;"
+autostart=true
+autorestart=true
+startsecs=3
+priority=5
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
 [program:shiny]
-command=Rscript /app/start_shiny.R
+command=/usr/local/bin/R -e "shiny::runApp('/app/inst', host='0.0.0.0', port=3838)"
 directory=/app
 autostart=true
 autorestart=true
-startsecs=5
+startsecs=3
 stopsignal=TERM
-stopasgroup=true
-killasgroup=true
-environment=R_CONFIG_ACTIVE=production,PORT=3838
+environment=R_CONFIG_ACTIVE=production
 priority=10
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
@@ -26,37 +35,11 @@ command=/app/start_titiler_service.sh
 directory=/app
 autostart=true
 autorestart=true
-startsecs=5
+startsecs=3
 stopsignal=TERM
-stopasgroup=true
-killasgroup=true
 priority=20
+environment=TITILER_LOCALFILE_ENABLED=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
-
-[program:nginx]
-command=nginx -g "daemon off;"
-directory=/app
-autostart=true
-autorestart=true
-startsecs=5
-stopsignal=TERM
-stopasgroup=true
-killasgroup=true
-# Start nginx last so upstreams are likely ready
-priority=50
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
-
-[unix_http_server]
-file=/var/run/supervisor.sock
-
-[supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
-
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
