--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,8 +53,7 @@ importFrom(R6, R6Class)
 importFrom(dplyr, "%>%")
 importFrom(tibble, tibble)
 importFrom(sf, st_as_sf, st_buffer, st_union)
-importFrom(terra, vect, rast, extract, crop, mask, cellSize, app, makeValid)
-importFrom(ncdf4, nc_open, nc_close, ncatt_get)
+# terra and ncdf4 moved to Suggests; access via requireNamespace checks in code
 importFrom(countrycode, countrycode)
 importFrom(glue, glue)
 importFrom(stringr, str_extract)
